--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1109/LICS52264.2021.9470673 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2102.00329 target=_blank rel=noopener>
+arXiv
+</a>
 </p>
 </div>
 <div class=pub-list-item style=margin-bottom:1rem>
@@ -155,14 +158,14 @@ DOI
 <a href=/bib/publication/hietala-2021-a/>Proving Quantum Programs Correct</a>.
 <em>12th International Conference on Interactive Theorem Proving (ITP 2021)</em>.
 <p>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/inQWIRE/SQIR target=_blank rel=noopener>
-PDF
-</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/hietala-2021-a/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4230/LIPIcs.ITP.2021.21 target=_blank rel=noopener>
 DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/inQWIRE/SQIR target=_blank rel=noopener>
+URL
 </a>
 </p>
 </div>
@@ -177,14 +180,14 @@ DOI
 <a href=/bib/publication/yu-2021/>Quantum Abstract Interpretation</a>.
 <em>Proceedings of the 42nd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
 <p>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://web.cs.ucla.edu/~palsberg/paper/pldi21-quantum.pdf target=_blank rel=noopener>
-PDF
-</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/yu-2021/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3453483.3454061 target=_blank rel=noopener>
 DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://web.cs.ucla.edu/~palsberg/paper/pldi21-quantum.pdf target=_blank rel=noopener>
+URL
 </a>
 </p>
 </div>
