deploy: QuantumPL/bibsite@0800e4cb5f7773151d7c5443e759feb5cc9b3c7c

--- a/publication/index.html
+++ b/publication/index.html
@@ -2440,6 +2440,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1017/CBO9781139193313.009 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://opus.lib.uts.edu.au/bitstream/10453/12965/1/2008004719.pdf target=_blank rel=noopener>
+URL
+</a>
 </div>
 </div>
 <div class=ml-3>
