deploy: QuantumPL/bibsite@2d5cd761a8fa1501d7232d357ef68a3035995d85

--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@ URL
 <a href=/bib/publication/yu-2021/>Quantum Abstract Interpretation</a>.
 <em>Proceedings of the 42nd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
 <p>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://web.cs.ucla.edu/~palsberg/paper/pldi21-quantum.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/yu-2021/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3453483.3454061 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://web.cs.ucla.edu/~palsberg/paper/pldi21-quantum.pdf target=_blank rel=noopener>
-URL
 </a>
 </p>
 </div>
