--- a/publication/index.html
+++ b/publication/index.html
@@ -213,14 +213,14 @@ In quantum computing, the basic unit of information is a qubit. Simulation of a 
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://web.cs.ucla.edu/~palsberg/paper/pldi21-quantum.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/yu-2021/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3453483.3454061 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://web.cs.ucla.edu/~palsberg/paper/pldi21-quantum.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -590,14 +590,14 @@ Existing quantum languages force the programmer to work at a low level of abstra
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://files.sri.inf.ethz.ch/website/papers/pldi20-silq.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/bichsel-2020/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3385412.3386007 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://files.sri.inf.ethz.ch/website/papers/pldi20-silq.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -626,11 +626,11 @@ The Heisenberg representation of quantum operators provides a powerful technique
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://people.cs.uchicago.edu/~rand/qpl_2020.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/rand-2020/cite.bib>
 Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://people.cs.uchicago.edu/~rand/qpl_2020.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -862,14 +862,14 @@ We derive a variant of quantum Hoare logic (QHL), called applied quantum Hoare l
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://opus.lib.uts.edu.au/bitstream/10453/140615/2/3314221.3314584.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/zhou-2019/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3314221.3314584 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://opus.lib.uts.edu.au/bitstream/10453/140615/2/3314221.3314584.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -1803,14 +1803,14 @@ This paper introduces QWIRE (``choir''), a language for defining quantum circuit
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://jpaykin.github.io/papers/prz_qwire_2017.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/paykin-2017/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3009837.3009894 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://jpaykin.github.io/papers/prz_qwire_2017.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -1838,14 +1838,14 @@ Program invariant is a fundamental notion widely used in program verification an
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://opus.lib.uts.edu.au/bitstream/10453/127333/4/p818-ying.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/ying-2017/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3009837.3009840 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://opus.lib.uts.edu.au/bitstream/10453/127333/4/p818-ying.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -2524,14 +2524,14 @@ The quantum IO monad is a purely functional interface to quantum programming imp
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.cs.nott.ac.uk/~psztxa/g5xnsc/chapter.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/altenkirch-2009/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1017/CBO9781139193313.006 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.cs.nott.ac.uk/~psztxa/g5xnsc/chapter.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -2584,14 +2584,14 @@ We discuss the design of a typed lambda calculus for quantum computation. After 
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.mscs.dal.ca/~selinger/papers/qlambdabook.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/selinger-2009/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1017/CBO9781139193313.005 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.mscs.dal.ca/~selinger/papers/qlambdabook.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -2620,14 +2620,14 @@ This chapter presents a systematic exposition of predicate transformer semantics
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://opus.lib.uts.edu.au/bitstream/10453/12965/1/2008004719.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/ying-2009/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1017/CBO9781139193313.009 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://opus.lib.uts.edu.au/bitstream/10453/12965/1/2008004719.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -2783,14 +2783,14 @@ Measurement-based quantum computation has emerged from the physics community as 
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.cs.mcgill.ca/~prakash/Pubs/jacm.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/danos-2007/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/1219092.1219096 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.cs.mcgill.ca/~prakash/Pubs/jacm.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -2880,14 +2880,14 @@ We develop a notion of predicate transformer and, in particular, the weakest pre
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.cs.mcgill.ca/~prakash/Pubs/weakest_mscs.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/dhondt-2006/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1017/S0960129506005251 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.cs.mcgill.ca/~prakash/Pubs/weakest_mscs.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -2914,14 +2914,14 @@ In this paper we develop a functional programming language for quantum computers
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.mscs.dal.ca/~selinger/papers/papers/qlambda-mscs.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/selinger-2006/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1017/S0960129506005238 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.mscs.dal.ca/~selinger/papers/papers/qlambda-mscs.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -2982,6 +2982,9 @@ We define a language CQP (Communicating Quantum Processes) for modelling systems
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://www.dcs.gla.ac.uk/~simon/publications/CQP-POPL.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/gay-2005/cite.bib>
 Cite
 </a>
@@ -2990,9 +2993,6 @@ DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/quant-ph/0409052 target=_blank rel=noopener>
 arXiv
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://www.dcs.gla.ac.uk/~simon/publications/CQP-POPL.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -3018,14 +3018,14 @@ We propose the design of a programming language for quantum computing. Tradition
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.mathstat.dal.ca/~selinger/papers/papers/qpl.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/selinger-2004-a/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1017/S0960129504004256 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.mathstat.dal.ca/~selinger/papers/papers/qpl.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
@@ -3145,11 +3145,11 @@ arXiv
 </div>
 </div>
 <div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://www.itp.tuwien.ac.at/~oemer/doc/structquprog.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/oemer-2003/cite.bib>
 Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://www.itp.tuwien.ac.at/~oemer/doc/structquprog.pdf target=_blank rel=noopener>
-URL
 </a>
 </div>
 </div>
