deploy: QuantumPL/site@828a6e4b39f28e3e1688e3acf84f89579ca58b31

--- a/publication/ying-2016/index.html
+++ b/publication/ying-2016/index.html
@@ -129,7 +129,7 @@ Book
 <div class=col-md-10>
 <div class=row>
 <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-<div class="col-12 col-md-9"><em>Morgan Kaufmann is an imprint of Elsevier</em></div>
+<div class="col-12 col-md-9"><em>Morgan Kaufmann</em></div>
 </div>
 </div>
 <div class=col-md-1></div>
