--- a/publication/Rand2020/index.html
+++ b/publication/Rand2020/index.html
@@ -109,6 +109,9 @@ PDF
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Rand2020/cite.bib>
 Cite
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://rand.cs.uchicago.edu/publication/rand-2020-gottesman/ target=_blank rel=noopener>
+URL
+</a>
 </div>
 </div>
 <div class=article-container>
