--- a/publication/index.html
+++ b/publication/index.html
@@ -635,6 +635,9 @@ PDF
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Rand2020/cite.bib>
 Cite
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://rand.cs.uchicago.edu/publication/rand-2020-gottesman/ target=_blank rel=noopener>
+URL
+</a>
 </div>
 </div>
 <div class=ml-3>
