deploy: QuantumPL/site@763fefe4b05b328a79697bbcc084c9e4f4415600

--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3434318 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/inQWIRE/SQIR target=_blank rel=noopener>
+URL
+</a>
 </p>
 </div>
 <div class=see-all>
