--- a/publication/Hietala2021/index.html
+++ b/publication/Hietala2021/index.html
@@ -110,6 +110,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.1145/3434318 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://github.com/inQWIRE/SQIR target=_blank rel=noopener>
+URL
+</a>
 </div>
 </div>
 <div class=article-container>
