deploy: QuantumPL/site@587b1f6cbd054525922f31843ebb0ada5edc0530

--- a/publication-type/5/index.html
+++ b/publication-type/5/index.html
@@ -93,21 +93,25 @@
 <div>
 <h2><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></h2>
 <div class=article-style>
+Model checking is one of the most successful verification techniques and has been widely adopted in traditional computing and communication hardware and software industries. This book provides the first systematic introduction to model checking …
 </div>
 </div>
 <div>
 <h2><a href=/bib/publication/Ying2016/>Foundations of Quantum Programming</a></h2>
 <div class=article-style>
+Foundations of Quantum Programming discusses how new programming methodologies and technologies developed for current computers can be extended to exploit the unique power of quantum computers, which promise dramatic advantages in processing speed …
 </div>
 </div>
 <div>
 <h2><a href=/bib/publication/Nielsen2010/>Quantum Computation and Quantum Information: 10th Anniversary Edition</a></h2>
 <div class=article-style>
+One of the most cited books in physics of all time, Quantum Computation and Quantum Information remains the best textbook in this exciting field of science. This 10th anniversary edition includes an introduction from the authors setting the work in …
 </div>
 </div>
 <div>
 <h2><a href=/bib/publication/Gay2009/>Semantic Techniques in Quantum Computation</a></h2>
 <div class=article-style>
+The study of computational processes based on the laws of quantum mechanics has led to the discovery of new algorithms, cryptographic techniques, and communication primitives. This book explores quantum computation from the perspective of the branch …
 </div>
 </div>
 </div>
