--- a/publication/index.html
+++ b/publication/index.html
@@ -308,6 +308,11 @@ DOI
 <div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a>
 </div>
+<a href=/bib/publication/Ying2021/ class=summary-link>
+<div class=article-style>
+Model checking is one of the most successful verification techniques and has been widely adopted in traditional computing and …
+</div>
+</a>
 <div class="stream-meta article-metadata">
 <div>
 <span>
@@ -1845,6 +1850,11 @@ arXiv
 <div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Ying2016/>Foundations of Quantum Programming</a>
 </div>
+<a href=/bib/publication/Ying2016/ class=summary-link>
+<div class=article-style>
+Foundations of Quantum Programming discusses how new programming methodologies and technologies developed for current computers can be …
+</div>
+</a>
 <div class="stream-meta article-metadata">
 <div>
 <span>
@@ -2342,6 +2352,11 @@ arXiv
 <div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Nielsen2010/>Quantum Computation and Quantum Information: 10th Anniversary Edition</a>
 </div>
+<a href=/bib/publication/Nielsen2010/ class=summary-link>
+<div class=article-style>
+One of the most cited books in physics of all time, Quantum Computation and Quantum Information remains the best textbook in this …
+</div>
+</a>
 <div class="stream-meta article-metadata">
 <div>
 <span>
@@ -2466,6 +2481,11 @@ DOI
 <div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Gay2009/>Semantic Techniques in Quantum Computation</a>
 </div>
+<a href=/bib/publication/Gay2009/ class=summary-link>
+<div class=article-style>
+The study of computational processes based on the laws of quantum mechanics has led to the discovery of new algorithms, cryptographic …
+</div>
+</a>
 <div class="stream-meta article-metadata">
 <div>
 <span>
