deploy: QuantumPL/site@68be5d3663a9df6656992c21da8cecdb11416c7c

--- a/publication/Rand2018b/index.html
+++ b/publication/Rand2018b/index.html
@@ -114,7 +114,8 @@ URL
 <h3>Abstract</h3>
 <p class=pub-abstract>We explore the design space of using dependent types to type check and verify quantum circuits. We weigh the trade-offs between the expressivity of dependent types against the costs imposed by large proof terms. We propose lightweight dependent types, or phantom types, as a middle ground, which provide useful type information for programming while specifying the properties to be externally verified.</p>
 <div class=space-below></div>
-<div class=article-style></div>
+<div class=article-style><p>Talk at The Fourth International Workshop on Coq for Programming Languages (CoqPL &lsquo;18)</p>
+</div>
 </div>
 </div>
 </div>
