--- a/publication/Singhal2020/index.html
+++ b/publication/Singhal2020/index.html
@@ -114,7 +114,8 @@ URL
 <h3>Abstract</h3>
 <p class=pub-abstract>We describe the ongoing development of a verified translator between OpenQASM (Open Quantum Assembly Language) and sqir, a Small Quantum Intermediate Representation used for circuit optimization. Verified translation from and to OpenQASM will allow verified optimization of circuits written in a variety of tools and executed on real quantum computers. This translator is a step toward a verified compilation stack for quantum computing.</p>
 <div class=space-below></div>
-<div class=article-style></div>
+<div class=article-style><p>Talk at The First International Workshop on Programming Languages for Quantum Computing (PLanQC &lsquo;20)</p>
+</div>
 </div>
 </div>
 </div>
