--- a/404.html
+++ b/404.html
@@ -92,8 +92,6 @@
 <p>Perhaps you were looking for one of these?</p>
 <h2>Latest</h2>
 <ul>
-<li><a href=/bib/event/>Recent & Upcoming Events</a></li>
-<li><a href=/bib/event/example/>Example Event</a></li>
 <li><a href=/bib/post/>Latest News</a></li>
 <li><a href=/bib/post/gh-org-ui/>GitHub Org and Better UI</a></li>
 <li><a href=/bib/publication/>Publications</a></li>
@@ -102,6 +100,8 @@
 <li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
 <li><a href=/bib/publication/Chareton2021/>An Automated Deductive Verification Framework for Circuit-Building Quantum Programs</a></li>
 <li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
+<li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
+<li><a href=/bib/publication/Heim2020a/>Quantum Programming Languages</a></li>
 </ul>
 </div>
 </div>
