deploy: QuantumPL/site@9a1be291bd6e683ef2ef38224963178b6845d918

--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -250,6 +250,12 @@ We propose a notion of quantum control in a quantum programming language which p
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Staton2015/>Algebraic Effects, Linearity, and Quantum Programming Languages</a></h2>
+<div class=article-style>
+We develop a new framework of algebraic theories with linear parameters, and use it to analyze the equational reasoning principles of quantum computing and quantum programming languages. We use the framework as follows: we present a new elementary …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Green2013a/>An Introduction to Quantum Programming in Quipper</a></h2>
 <div class=article-style>
 Quipper is a recently developed programming language for expressing quantum computations. This paper gives a brief tutorial introduction to the language, through a demonstration of how to make use of some of its key features. We illustrate many of …
