--- a/publication/index.html
+++ b/publication/index.html
@@ -2011,6 +2011,39 @@ arXiv
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2015">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Staton2015/>Algebraic Effects, Linearity, and Quantum Programming Languages</a>
+</div>
+<a href=/bib/publication/Staton2015/ class=summary-link>
+<div class=article-style>
+We develop a new framework of algebraic theories with linear parameters, and use it to analyze the equational reasoning principles of …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Sam-Staton/>Sam Staton</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://www.cs.ox.ac.uk/people/samuel.staton/papers/popl2015.pdf target=_blank rel=noopener>
+PDF
+</a>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Staton2015/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/2676726.2676999 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2014">
 <div class="media stream-item">
 <div class=media-body>
