deploy: QuantumPL/site@10d0927a2b8363e65b10c0b54d979de493fde607

--- a/publication/Chareton2021/index.html
+++ b/publication/Chareton2021/index.html
@@ -147,6 +147,19 @@ Conference paper
 <div class=space-below></div>
 <div class=article-style><p>See extended version [<a href=../Chareton2020>Chareton2020</a>] for additional technical material.</p>
 </div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/deductive-verification/>deductive verification</a>
+<a class="badge badge-light" href=/bib/tag/quantum-programming/>quantum programming</a>
+<a class="badge badge-light" href=/bib/tag/quantum-circuits/>quantum circuits</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Yu2021/>Quantum Abstract Interpretation</a></li>
+<li><a href=/bib/publication/Ying2017/>Invariants of Quantum Programs: Characterisations and Generation</a></li>
+<li><a href=/bib/publication/Li2017/>Algorithmic Analysis of Termination Problems for Quantum Programs</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
