--- a/publication/Ying2021/index.html
+++ b/publication/Ying2021/index.html
@@ -143,6 +143,18 @@ Book
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/model-checking/>model checking</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-Computing/>Quantum Computing</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Zhou2021/>A Quantum Interpretation of Bunched Logic & Quantum Separation Logic</a></li>
+<li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
+<li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
