--- a/publication/Hietala2021/index.html
+++ b/publication/Hietala2021/index.html
@@ -149,6 +149,21 @@ Journal article
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/Programming-Languages/>Programming Languages</a>
+<a class="badge badge-light" href=/bib/tag/Formal-Verification/>Formal Verification</a>
+<a class="badge badge-light" href=/bib/tag/Certified-Compilation/>Certified Compilation</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-Computing/>Quantum Computing</a>
+<a class="badge badge-light" href=/bib/tag/Circuit-Optimization/>Circuit Optimization</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
+<li><a href=/bib/publication/Zhou2021/>A Quantum Interpretation of Bunched Logic & Quantum Separation Logic</a></li>
+<li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
