--- a/publication/Ying2017/index.html
+++ b/publication/Ying2017/index.html
@@ -157,7 +157,9 @@ Conference paper
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Yu2021/>Quantum Abstract Interpretation</a></li>
 <li><a href=/bib/publication/Li2017/>Algorithmic Analysis of Termination Problems for Quantum Programs</a></li>
+<li><a href=/bib/publication/Chareton2021/>An Automated Deductive Verification Framework for Circuit-Building Quantum Programs</a></li>
 </ul>
 </div>
 </div>
