--- a/publication/Zhou2021/index.html
+++ b/publication/Zhou2021/index.html
@@ -149,6 +149,27 @@ Conference paper
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/formal-logic/>formal logic</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-Computing/>Quantum Computing</a>
+<a class="badge badge-light" href=/bib/tag/substructural-logic/>substructural logic</a>
+<a class="badge badge-light" href=/bib/tag/separating-conjunction/>separating conjunction</a>
+<a class="badge badge-light" href=/bib/tag/separable-quantum-states/>separable quantum states</a>
+<a class="badge badge-light" href=/bib/tag/program-logic/>program logic</a>
+<a class="badge badge-light" href=/bib/tag/imperative-quantum-programs/>imperative quantum programs</a>
+<a class="badge badge-light" href=/bib/tag/variational-quantum-algorithm/>variational quantum algorithm</a>
+<a class="badge badge-light" href=/bib/tag/quantum-interpretation/>quantum interpretation</a>
+<a class="badge badge-light" href=/bib/tag/bunched-logic/>bunched logic</a>
+<a class="badge badge-light" href=/bib/tag/quantum-separation-logic/>quantum separation logic</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
+<li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
+<li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
