deploy: QuantumPL/site@d78bbcb013af2ac832abf93046d84d4153f6f6c3

--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -136,6 +136,12 @@ The Heisenberg representation of quantum operators provides a powerful technique
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a></h2>
+<div class=article-style>
+As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum programs. In classical computing, formal verification and sound static type systems prevent several classes of bugs …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Bichsel2020/>Silq: A High-Level Quantum Language with Safe Uncomputation and Intuitive Semantics</a></h2>
 <div class=article-style>
 Existing quantum languages force the programmer to work at a low level of abstraction leading to unintuitive and cluttered code. A fundamental reason is that dropping temporary values from the program state requires explicitly applying quantum …
@@ -145,6 +151,12 @@ Existing quantum languages force the programmer to work at a low level of abstra
 <h2><a href=/bib/publication/Pechoux2020/>Quantum Programming with Inductive Datatypes: Causality and Affine Type Theory</a></h2>
 <div class=article-style>
 Inductive datatypes in programming languages allow users to define useful data structures such as natural numbers, lists, trees, and others. In this paper we show how inductive datatypes may be added to the quantum programming language QPL. We …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></h2>
+<div class=article-style>
+We describe the ongoing development of a verified translator between OpenQASM (Open Quantum Assembly Language) and sqir, a Small Quantum Intermediate Representation used for circuit optimization. Verified translation from and to OpenQASM will allow …
 </div>
 </div>
 <div>
