--- a/publication-type/7/index.html
+++ b/publication-type/7/index.html
@@ -100,6 +100,12 @@ The aim of this thesis is to identify practical applications where quantum compu
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></h2>
+<div class=article-style>
+As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum programs. Inspired by Hoare Type Theory in classical computing, we propose Quantum Hoare Type Theory (QHTT) in which …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Rand2018a/>Formally Verified Quantum Programming</a></h2>
 <div class=article-style>
 The field of quantum mechanics predates computer science by at least ten years, the time between the publication of the Schrodinger equation and the Church-Turing thesis. It took another fifty years for Feynman to recognize that harnessing quantum …
