--- a/publication/index.html
+++ b/publication/index.html
@@ -417,6 +417,39 @@ URL
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a>
+</div>
+<a href=/bib/publication/Singhal2020b/ class=summary-link>
+<div class=article-style>
+As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Kartik-Singhal/>Kartik Singhal</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Singhal2020b/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2012.02154 target=_blank rel=noopener>
+arXiv
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://ks.cs.uchicago.edu/publication/qhtt-masters/ target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-7 year-2020">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Heim2020/>Development of Quantum Applications</a>
 </div>
 <a href=/bib/publication/Heim2020/ class=summary-link>
@@ -623,6 +656,40 @@ DOI
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a>
+</div>
+<a href=/bib/publication/Singhal2020a/ class=summary-link>
+<div class=article-style>
+As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Kartik-Singhal/>Kartik Singhal</a></span>, <span>
+<a href=/bib/author/John-Reppy/>John Reppy</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Singhal2020a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/EPTCS.340.15 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://ks.cs.uchicago.edu/publication/qhtt/ target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2020">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Rand2020/>Gottesman Types for Quantum Programs</a>
 </div>
 <a href=/bib/publication/Rand2020/ class=summary-link>
@@ -645,6 +712,9 @@ PDF
 </a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Rand2020/cite.bib>
 Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/EPTCS.340.14 target=_blank rel=noopener>
+DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://rand.cs.uchicago.edu/publication/rand-2020-gottesman/ target=_blank rel=noopener>
 URL
@@ -688,7 +758,7 @@ DOI
 </div>
 </div>
 </div>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2020">
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2020">
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
@@ -2702,6 +2772,9 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1038/nphys1157 target=_blank rel=noopener>
 DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/0910.1116 target=_blank rel=noopener>
+arXiv
 </a>
 </div>
 </div>
