--- a/publication/Briegel2009/index.html
+++ b/publication/Briegel2009/index.html
@@ -113,6 +113,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.1038/nphys1157 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/0910.1116 target=_blank rel=noopener>
+arXiv
+</a>
 </div>
 </div>
 <div class=article-container>
