--- a/publication/Rand2020/index.html
+++ b/publication/Rand2020/index.html
@@ -112,6 +112,9 @@ PDF
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Rand2020/cite.bib>
 Cite
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.4204/EPTCS.340.14 target=_blank rel=noopener>
+DOI
+</a>
 <a class="btn btn-outline-primary btn-page-header" href=https://rand.cs.uchicago.edu/publication/rand-2020-gottesman/ target=_blank rel=noopener>
 URL
 </a>
@@ -148,6 +151,21 @@ Conference paper
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/Quantum-Computing/>Quantum Computing</a>
+<a class="badge badge-light" href=/bib/tag/Type-Systems/>Type Systems</a>
+<a class="badge badge-light" href=/bib/tag/Gottesman-Types/>Gottesman Types</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
+<li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
+<li><a href=/bib/publication/Zhou2021/>A Quantum Interpretation of Bunched Logic & Quantum Separation Logic</a></li>
+<li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
+<li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
