--- a/publication/Singhal2020/index.html
+++ b/publication/Singhal2020/index.html
@@ -116,8 +116,49 @@ URL
 <div class=article-container>
 <h3>Abstract</h3>
 <p class=pub-abstract>We describe the ongoing development of a verified translator between OpenQASM (Open Quantum Assembly Language) and sqir, a Small Quantum Intermediate Representation used for circuit optimization. Verified translation from and to OpenQASM will allow verified optimization of circuits written in a variety of tools and executed on real quantum computers. This translator is a step toward a verified compilation stack for quantum computing.</p>
+<div class=row>
+<div class=col-md-1></div>
+<div class=col-md-10>
+<div class=row>
+<div class="col-12 col-md-3 pub-row-heading">Type</div>
+<div class="col-12 col-md-9">
+<a href=/bib/publication/#1>
+Conference paper
+</a>
+</div>
+</div>
+</div>
+<div class=col-md-1></div>
+</div>
+<div class="d-md-none space-below"></div>
+<div class=row>
+<div class=col-md-1></div>
+<div class=col-md-10>
+<div class=row>
+<div class="col-12 col-md-3 pub-row-heading">Publication</div>
+<div class="col-12 col-md-9"><em>Informal Proceedings of the First International Workshop on Programming Languages for Quantum Computing (PLanQC &lsquo;20)</em></div>
+</div>
+</div>
+<div class=col-md-1></div>
+</div>
+<div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>Talk at The First International Workshop on Programming Languages for Quantum Computing (PLanQC &lsquo;20)</p>
+<div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/Formal-Verification/>Formal Verification</a>
+<a class="badge badge-light" href=/bib/tag/NISQ/>NISQ</a>
+<a class="badge badge-light" href=/bib/tag/Program-Proof/>Program Proof</a>
+<a class="badge badge-light" href=/bib/tag/Programming-Languages/>Programming Languages</a>
+<a class="badge badge-light" href=/bib/tag/Semantic-Preservation/>Semantic Preservation</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
+<li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
+<li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
+<li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
+</ul>
 </div>
 </div>
 </div>
