--- a/publication/Staton2015/index.html
+++ b/publication/Staton2015/index.html
@@ -147,8 +147,14 @@ Conference paper
 <div class=article-style></div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/monads/>monads</a>
-<a class="badge badge-light" href=/bib/tag/quantum-computation/>quantum computation</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-Computation/>Quantum Computation</a>
 <a class="badge badge-light" href=/bib/tag/algebraic-effects/>algebraic effects</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
+</ul>
 </div>
 </div>
 </div>
