deploy: QuantumPL/site@fd7cb21cfe46bb2990a7f65e5af53ee42797c822

--- a/publication-type/7/index.html
+++ b/publication-type/7/index.html
@@ -106,9 +106,21 @@ As quantum computers become real, it is high time we come up with effective tech
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></h2>
+<div class=article-style>
+The design and compilation of correct, efficient quantum circuits is integral to the future operation of quantum computers. This thesis makes contributions to the problems of optimizing and verifying quantum circuits, with an emphasis on the …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Rand2018a/>Formally Verified Quantum Programming</a></h2>
 <div class=article-style>
 The field of quantum mechanics predates computer science by at least ten years, the time between the publication of the Schrodinger equation and the Church-Turing thesis. It took another fifty years for Feynman to recognize that harnessing quantum …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/Paykin2018/>Linear/non-Linear Types For Embedded Domain-Specific Languages</a></h2>
+<div class=article-style>
+Domain-specific languages are often embedded inside of general-purpose host languages so that the embedded language can take advantage of host-language data structures, libraries, and tools. However, when the domain-specific language uses linear …
 </div>
 </div>
 <div>
