--- a/publication/index.html
+++ b/publication/index.html
@@ -968,9 +968,9 @@ DOI
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Amy2019a/>Sized Types for Low-Level Quantum Metaprogramming</a>
+<a href=/bib/publication/Amy2019b/>Sized Types for Low-Level Quantum Metaprogramming</a>
 </div>
-<a href=/bib/publication/Amy2019a/ class=summary-link>
+<a href=/bib/publication/Amy2019b/ class=summary-link>
 <div class=article-style>
 One of the most fundamental aspects of quantum circuit design is the concept of families of circuits parametrized by an instance size. …
 </div>
@@ -982,7 +982,7 @@ One of the most fundamental aspects of quantum circuit design is the concept of 
 </div>
 </div>
 <div class=btn-links>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Amy2019a/cite.bib>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Amy2019b/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-3-030-21500-2_6 target=_blank rel=noopener>
@@ -1196,6 +1196,39 @@ DOI
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-7 year-2019">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a>
+</div>
+<a href=/bib/publication/Amy2019a/ class=summary-link>
+<div class=article-style>
+The design and compilation of correct, efficient quantum circuits is integral to the future operation of quantum computers. This thesis …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Matthew-Amy/>Matthew Amy</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Amy2019a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-3-030-21500-2_6 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://hdl.handle.net/10012/14480 target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
 <div class="media stream-item">
 <div class=media-body>
@@ -1344,6 +1377,36 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1810.11334 target=_blank rel=noopener>
 arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-7 year-2018">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Paykin2018/>Linear/non-Linear Types For Embedded Domain-Specific Languages</a>
+</div>
+<a href=/bib/publication/Paykin2018/ class=summary-link>
+<div class=article-style>
+Domain-specific languages are often embedded inside of general-purpose host languages so that the embedded language can take advantage …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Jennifer-Paykin/>Jennifer Paykin</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Paykin2018/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://repository.upenn.edu/edissertations/2752/ target=_blank rel=noopener>
+URL
 </a>
 </div>
 </div>
