deploy: QuantumPL/site@d2571eb334d576f485b10e2c57a84d9d4a5a7b27

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ See all publications
 <div class=container>
 <div class="row justify-content-center">
 <div class="section-heading col-12 mb-3 text-center">
-<h1 class=mb-0>Latest News</h1>
+<h1 class=mb-0>News</h1>
 </div>
 <div class=col-12>
 <div class=card-simple>
@@ -281,6 +281,28 @@ Jul 29, 2021
 So I decided to move the GitHub repo to its own organization and set up this Hugo-based website to present publications with many filtering options.</p>
 </div>
 </a>
+</div>
+</div>
+</div>
+</div>
+</section>
+<section id=tags class="home-section wg-tag-cloud">
+<div class=home-section-bg></div>
+<div class=container>
+<div class=row>
+<div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start">
+<h1 class=mb-0>Top Keywords</h1>
+</div>
+<div class="col-12 col-lg-8">
+<div class=tag-cloud>
+<a href=/bib/tag/Formal-Verification/ style=font-size:1.7842568972904107rem>Formal Verification</a>
+<a href=/bib/tag/Pre-and-Postconditions/ style=font-size:.7rem>Pre- and Postconditions</a>
+<a href=/bib/tag/Program-Proof/ style=font-size:1.1797913203571053rem>Program Proof</a>
+<a href=/bib/tag/Program-Specifications/ style=font-size:.7rem>Program Specifications</a>
+<a href=/bib/tag/Programming-Languages/ style=font-size:1.5202086796428946rem>Programming Languages</a>
+<a href=/bib/tag/Quantum-Computing/ style=font-size:1.7842568972904107rem>Quantum Computing</a>
+<a href=/bib/tag/quantum-programming/ style=font-size:1.1797913203571053rem>quantum programming</a>
+<a href=/bib/tag/Type-Systems/ style=font-size:1.1797913203571053rem>Type Systems</a>
 </div>
 </div>
 </div>
