--- a/publication-type/0/index.html
+++ b/publication-type/0/index.html
@@ -106,6 +106,12 @@ This paper presents an equational theory for the QRAM model of quantum computati
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Hietala2019/>Verified Optimization in a Quantum Intermediate Representation</a></h2>
+<div class=article-style>
+We present sqire, a low-level language for quantum computing and verification. sqire uses a global register of quantum bits, allowing easy compilation to and from existing `quantum assembly' languages and simplifying the verification process. We …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Liu2019a/>Quantum Hoare Logic</a></h2>
 <div class=article-style>
 QHLProver-AFP, formal proof development in Isabelle, supplement to [Liu2019]
